--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "svg-converter",
+  "name": "svg-to-png",
   "version": "1.0.0",
-  "description": "Microservicio para convertir SVG en PNG",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
-    "uuid": "^9.0.0"
+    "puppeteer": "^21.11.0"
   }
 }
+
