--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "svg-to-png",
+  "name": "svg-converter",
   "version": "1.0.0",
+  "description": "Microservicio SVG a PNG ligero",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.11.0"
+    "puppeteer-core": "^21.11.0",
+    "uuid": "^9.0.0"
   }
 }
-
