--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "svg-converter",
   "version": "1.0.0",
-  "description": "Microservicio SVG a PNG ligero",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "^21.11.0",
-    "uuid": "^9.0.0"
+    "puppeteer": "^21.3.8",
+    "body-parser": "^1.20.2"
   }
 }
